# Oxidize-OS

./: .gitignore  README.md
oxidize_os/: Cargo.toml
oxidize_os/.cargo/: config.toml
oxidize_os/src/: main.rs  vga_buffer.rs
